UI Components Fixing Contrast of Close Button

--- a/src/UI/templates/default/Button/button.less
+++ b/src/UI/templates/default/Button/button.less
@@ -129,3 +129,12 @@ a[disabled], a fieldset[disabled] & {
 	background-position: right center;
 	padding-right: 18px;
 }
+
+.close{
+  color: @il-neutral-light-color;
+  opacity: 1;
+  &:hover, &:focus{
+    color: @il-neutral-color;
+    opacity: 1;
+  }
+}
